Modificado el main registered

--- a/main-registered.html
+++ b/main-registered.html
@@ -1,10 +1,212 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    <title>Mochileros sin fronteras</title>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- STYLE -->
+    <link rel="stylesheet" href="style/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  </head>
+
 <body>
+
+    <header class="align_all_items_center">
+        <div id="site_title"><b>Mochileros sin fronteras</b></div>
+        <div id="site_shortcuts">
+            <div>Inicio</div>
+            <div>Experiencias</div>
+            <div>Consejos</div>
+            <div>Foro</div>
+            <div>Contacto</div>
+        </div>
+        <div id="logo" class="align_all_items_center">
+            <img src="images/Dud.webp" alt="logo" style="width: 60px;">
+            <div id="language_selector" class="align_all_items_center box_shadow_background">
+                <div>ES</div>
+                <span class="material-icons">arrow_drop_down</span>
+            </div>
+        </div>
+    </header>
+
+    <section id="main">
+        <div id="main_content" class="align_all_items_center">
+            <article id="main_heading" class="align_all_items_center">
+                <div class="foreground_text align_all_items_center simple_box_border">
+                    <h4>Comparte y descubre viajes mochileros de larga distancia</h4>
+                </div>
+            </article>
+
+
+
+            <article id="images_carrousel" class="align_all_items_center">
+                <div class="align_all_items_center" style="min-width: 10%;">
+                    <div class="nav_button align_all_items_center box_shadow_background">
+                        <span class="material-icons">keyboard_arrow_left</span>
+                    </div>
+                </div>
+                <div id="scroll_experiences" class="align_all_items_center">
+                    <div id="experiences_title">
+                        <div class="simple_box_border foreground_text align_all_items_center"
+                             style="margin: 0 auto 0 30px">
+                            <p><b>Paquete Andorrano libre de impuestos</b></p>
+                        </div>
+                        <div class="simple_box_border foreground_text align_all_items_center"
+                             style="margin: 0 30px 0 auto"> <p><b>1200€</b></p> </div>
+                    </div>
+
+                    <div id="experiences_description" class="simple_box_border foreground_text">
+                        <p>Visitas al centro y a la montaña, con transporte incluido.</p>
+                    </div>
+
+                    <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center">
+                        <p>Comprar</p> </div>
+                </div>
+                <div class="align_all_items_center" style="min-width: 10%;">
+                    <div class="nav_button align_all_items_center box_shadow_background">
+                        <span class="material-icons">keyboard_arrow_right</span>
+                    </div>
+                </div>
+            </article>
+
+            <article id="experiences_grid">
+                <div id="experiences_grid_title">
+                    <h2>Experiencias de la comunidad mochilera</h2>
+                </div>
+                <div id="experiences_container">
+                    <div class="experience_shortcut">
+                        <div class="shortcut_title">
+                            <b>Hostal en Katmandú</b>
+                        </div>
+                        <img src="images/Katmandu.webp" alt="Katmandu" class="images_grid">
+                        <div class="right_nav_shortcut">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                Ver más
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience_shortcut">
+                        <div class="shortcut_title">
+                            <b>Sudamérica en bus</b>
+                        </div>
+                        <img src="images/Iguazu.jpg" alt="Cataratas del Iguazu" class="images_grid">
+                        <div class="right_nav_shortcut">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                Ver más
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience_shortcut">
+                        <div class="shortcut_title">
+                            <b>Visado para india</b>
+                        </div>
+                        <img src="images/india.jpg" alt="Taj Mahal" class="images_grid">
+                        <div class="right_nav_shortcut">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                Ver más
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience_shortcut">
+                        <div class="shortcut_title">
+                            <b>Vietnam, ruta en moto</b>
+                        </div>
+                        <img src="images/vietnam.jpeg" alt="Lago en Vietnam" class="images_grid">
+                        <div class="right_nav_shortcut">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                Ver más
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience_shortcut">
+                        <div class="shortcut_title">
+                            <b>Trekking en Perú</b>
+                        </div>
+                        <img src="images/Machu_Picchu.jpg" alt="Machu Picchu" class="images_grid">
+                        <div class="right_nav_shortcut">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                Ver más
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience_shortcut">
+                        <div class="shortcut_title">
+                            <b>Safari en Tanzania</b>
+                        </div>
+                        <img src="images/que-hacer-tanzania.webp" alt="Globos aerostáticos en Tanzania" class="images_grid">
+                        <div class="right_nav_shortcut">
+                            <div class="nav_button align_all_items_center">
+                                <span class="material-icons">favorite</span>
+                            </div>
+                            <div class="box_shadow_background align_all_items_center show_more">
+                                Ver más
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+
+        <aside id="aside_section">
+            <h2 style="margin-left: 20px;">Nombre de usuario</h2>
+            <div id="user_data">
+                <div id="user_photo" class="align_all_items_center">
+                    <img src="/images/tylerthecreator.webp" alt="Foto de perfil" style="height: 100%; width: 100%; border-radius: 10px;">
+                </div>
+                <div>
+
+                </div>
+            </div>
+        </aside>
+    </section>
+
+
+
+    <footer class="align_all_items_center">
+        <div id="left_footer">
+            <p>© 2025 mochileros sin fronteras</p>
+        </div>
+        <div id="center_footer" class="align_all_items_center">
+            <p>Sobre nosotros. Política de Privacidad. Ayuda</p>
+        </div>
+        <div class="align_all_items_center" style="margin-left: auto; margin-right: 10px;"> 
+            <a href="https://www.instagram.com/p/DOodaoADW28/" target="_blank">
+                <img src="/images/icons/instagram.png"
+                alt="Logo de Instagram"
+                style="height: 55px; margin: 10px">
+            </a>
+            <a href="https://www.tiktok.com/explore" target="_blank">
+                <img src="/images/icons/tiktok.png"
+                alt="Logo de TikTok"
+                style="height: 55px; margin: 10px">
+            </a>
+            <a href="https://youtu.be/fHPysRp8FWg?si=qZZO_LRgjP2ic3f_" target="_blank">
+                <img src="/images/icons/youtube.png"
+                alt="Logo de Youtube"
+                style="height: 60px; margin: 10px">
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
+
