--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
             <article id="images_carrousel" class="align_all_items_center">
-                <div class="align_all_items_center" style="min-width: 10%;">
+                <div class="align_all_items_center">
                     <div class="nav_button align_all_items_center box_shadow_background">
                         <span class="material-icons">keyboard_arrow_left</span>
                     </div>
@@ -61,13 +61,13 @@
                     </div>
 
                     <div id="experiences_description" class="simple_box_border foreground_text">
-                        <p>¡Linre de impuestos! Visitas al centro y a la montaña, con transporte incluido.</p>
+                        ¡Libre de impuestos! Visitas al centro y a la montaña, con transporte incluido.
                     </div>
 
                     <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center">
                         <p>Comprar</p> </div>
                 </div>
-                <div class="align_all_items_center" style="min-width: 10%;">
+                <div class="align_all_items_center">
                     <div class="nav_button align_all_items_center box_shadow_background">
                         <span class="material-icons">keyboard_arrow_right</span>
                     </div>
@@ -76,12 +76,12 @@
 
             <article id="experiences_grid">
                 <div id="experiences_grid_title">
-                    <h2>Experiencias de la comunidad mochilera</h2>
+                    Experiencias de la comunidad mochilera
                 </div>
                 <div id="experiences_container">
                     <div class="experience_shortcut">
                         <div class="shortcut_title">
-                            <b>Hostal en Katmandú</b>
+                            Hostal en Katmandú
                         </div>
                         <img src="images/Katmandu.webp" alt="Katmandu" class="images_grid">
                         <div class="right_nav_shortcut">
@@ -95,7 +95,7 @@
                     </div>
                     <div class="experience_shortcut">
                         <div class="shortcut_title">
-                            <b>Sudamérica en bus</b>
+                            Sudamérica en bus
                         </div>
                         <img src="images/Iguazu.jpg" alt="Cataratas del Iguazu" class="images_grid">
                         <div class="right_nav_shortcut">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="experience_shortcut">
                         <div class="shortcut_title">
-                            <b>Visado para india</b>
+                            Visado para india
                         </div>
                         <img src="images/india.jpg" alt="Taj Mahal" class="images_grid">
                         <div class="right_nav_shortcut">
@@ -123,7 +123,7 @@
                     </div>
                     <div class="experience_shortcut">
                         <div class="shortcut_title">
-                            <b>Vietnam, ruta en moto</b>
+                            Vietnam, ruta en moto
                         </div>
                         <img src="images/vietnam.jpeg" alt="Lago en Vietnam" class="images_grid">
                         <div class="right_nav_shortcut">
@@ -137,7 +137,7 @@
                     </div>
                     <div class="experience_shortcut">
                         <div class="shortcut_title">
-                            <b>Trekking en Perú</b>
+                            Trekking en Perú
                         </div>
                         <img src="images/Machu_Picchu.jpg" alt="Machu Picchu" class="images_grid">
                         <div class="right_nav_shortcut">
@@ -151,7 +151,7 @@
                     </div>
                     <div class="experience_shortcut">
                         <div class="shortcut_title">
-                            <b>Safari en Tanzania</b>
+                            Safari en Tanzania
                         </div>
                         <img src="images/que-hacer-tanzania.webp" alt="Globos aerostáticos en Tanzania" class="images_grid">
                         <div class="right_nav_shortcut">
