Añadido el input file para la página de registro

--- a/register.html
+++ b/register.html
@@ -67,6 +67,13 @@
             </label>
         </form>
 
+        <section id="upload_image">
+            <h4 style="margin-left: 20px; margin-bottom: 10px; margin-top: 5px;">Subir imagen de perfil</h4>
+            <input type="file" style="margin-left: 20px;">
+        </section>
+
+
+
         <section id="checkbox">
             <label style="height: 40px; width: 100%; display:flex; align-items: center;">
                 <input type="checkbox" style="height: 30px; width: 30px; margin-left: 20px;"> 
