--- a/index.html
+++ b/index.html
@@ -180,16 +180,16 @@
                         <input type="checkbox" id="recordar_checkbox" class="box_shadow_background">
                         Recordar mis credenciales
                     </label>
-                    <label class="align_all_items_center" style="width: 100%; margin-top: 20px">
+                    <label class="align_all_items_center" style="width: 100%; margin-top: 20px;">
                         <input type="submit"
                                value="Iniciar Sesión"
-                               class="box_shadow_background submit_user"
-                               style="margin-right: 20px">
+                               class="box_shadow_background submit_user"">
+                        <div class="align_all_items_center">
+                            <a href="/register.html" target="_blank" class="box_shadow_background submit_user align_all_items_center">
+                                Registro
+                            </a>
+                        </div>
                     </label>
-                    <label class="align_all_items_center" style="width: 100%; margin-top: 20px">
-                        <a href="/register.html" target="_blank" class="box_shadow_background submit_user">
-                            Registro
-                        </a>
                     </label>
                 </form>
             </div>
