--- a/buy.html
+++ b/buy.html
@@ -81,12 +81,14 @@
             </div>
 
             <h3 style="margin-bottom: 10px;">Tipo de tarjeta</h3>
-            <select id="select_box">
-                <option value="">--Seleccione una opción</option>
-                <option value="Visa">Visa</option>
-                <option value="MasterCard">MasterCard</option>
-                <option value="AmericanExpress">American Express</option>
-            </select>
+            <label for="select_box">
+                <select id="select_box">
+                    <option value="">--Seleccione una opción</option>
+                    <option value="Visa">Visa</option>
+                    <option value="MasterCard">MasterCard</option>
+                    <option value="AmericanExpress">American Express</option>
+                </select>
+            </label>
 
             <div class="boxes_main">
                 <input type="text" placeholder="Nombre del titular de la tarjeta" class="data_boxes">
