--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                     </div>
 
                     <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center">
-                        <p>Comprar</p>
+                        <a href="/buy.html" target="_blank">
+                            Comprar
+                        </a>
                     </div>
                 </div>
                 <div class="align_all_items_center">
