--- a/main-registered.html
+++ b/main-registered.html
@@ -64,7 +64,9 @@
                     </div>
 
                     <div id="buy_button" class="box_shadow_background foreground_text align_all_items_center">
-                        <p>Comprar</p>
+                        <a href="/buy.html" target="_blank">
+                            Comprar
+                        </a>
                     </div>
                 </div>
                 <div class="align_all_items_center">
@@ -245,7 +247,7 @@
             </form>
             
             <div id="calendar" class="align_all_items_center">
-                <img src="/images/imagen_calendario.avif" alt="foto de calendario" id="calendar_image">
+                <img src="/images/september-2025-calendar-portrait.png" alt="foto de calendario" id="calendar_image">
             </div>
             
         </aside>
